<resources>

    <string name="app_name">Alkotron</string>
    <string name="find_shops">Find nearby shops!</string>
    <string name="settings">Settings</string>
    <string name="favourites">Favourite shops</string>
    <string name="title_activity_favourites_container">FavouritesContainerActivity</string>
    <string name="action_settings">Settings</string>
    <string name="switch_off">Distance</string>
    <string name="switch_on">Max shops</string>
    <string name="switch_off_label">Set maximum distance in meters</string>
    <string name="switch_on_label">Set maximum number of shops</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="register_label">Not registered yet?</string>
    <string name="displayname_label">Display name</string>
    <string name="register">Register</string>
    <string name="maturity">I am at least 18 years old</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_splash">splash</string>
    <string name="email">email</string>
    <string name="search">search</string>
    <string name="whereareyou">ENTER WHERE ARE YOU</string>
    <string name="setings">Settings</string>
    <string name="programers">Programmers</string>
    <string name="website">Website</string>
    <string name="ourwebsite">Our website</string>
    <string name="aboutapp">About application</string>
    <string name="login">Login</string>
    <string name="logIn">Log in</string>
    <string name="preferences">Search preferences</string>
    <string name="searchh">Search!</string>
    <string name="favoruites">Favourite shops</string>
    <string name="error">report an error</string>
    <string name="problemcategory">category of the problem</string>
    <string name="problememail">your email</string>
    <string name="problemdesc">description</string>
    <string name="problemsend">send</string>
    <string name="signin">Sign in</string>
    <string name="describe">describe the problem</string>
    <string name="thanks">Thanks for your help</string>
    <string name="Maps">maps</string>
    <string name="maps">maps</string>
    <string name="displayShops">Search results</string>

</resources>
